[package]
name = "data_privacy_vault"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
lazy_static = "1.4"

[dev-dependencies]
actix-web = { version = "4.0", features = ["test"] }
serde_json = "1.0"
