[package]
name = "data_privacy_vault"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-service = "2.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
lazy_static = "1.4"
redis = "0.23"
aes = "0.8"
base64 = "0.21"
aws-config = "1.0"
aws-sdk-kms = "1.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
actix-web = "4.0"
serde_json = "1.0"
